<resources>
    <string name="app_name">MAD_T2_AND_T3_BMI_Calculator</string>
    <string name="are_you_at_least_20_years_old">Are you at least 20 Years Old?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="next">NEXT</string>
    <string name="your_prefered_system">Your prefered System</string>
    <string name="Title1">You have selected Metric System</string>
    <string name="Title2">You have selected Imperial System</string>
    <string name="your_bmi">Your BMI</string>
    <string name="plusSign">+</string>
    <string name="minusSign">-</string>
</resources>